<?xml version="1.0"?>
<!-->
Copyright (2019-2020) Robotics Systems Lab - ETH Zurich:
Jonas Junger, Johannes Pankert, Fabio Dubois, Lennart Nachtigall,
Markus Staeuble

This file is part of the elmo_ethercat_sdk.
The elmo_ethercat_sdk is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

The elmo_ethercat_sdk is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with the elmo_ethercat_sdk. If not, see <https://www.gnu.org/licenses/>.
<-->

<package format="2">
  <name>ethercat_sdk_master</name>
  <version>0.0.1</version>
  <description>Generic EtherCAT Master for CoE Drives</description>
  
  <license>GPLv3</license>
  <author email="jungerj@student.ethz.ch">Jonas Junger</author>
  <author email="nachtigall@mavt.ethz.ch">Lennart Nachtigall</author>
  <maintainer email="jungerj@student.ethz.ch">Jonas Junger</maintainer>
  <maintainer email="nachtigall@mavt.ethz.ch">Lennart Nachtigall</maintainer>
  <url type="website">https://bitbucket.org/leggedrobotics/ethercat_sdk_master</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>soem_interface</depend>

</package>
